# CMake config to build images from latex sources

cmake_minimum_required(VERSION 3.1)

project(MCS)

FIND_PACKAGE(LATEX REQUIRED COMPONENTS XELATEX MAKEINDEX)
# FIND_PACKAGE(LATEX REQUIRED COMPONENTS XELATEX BIBER)

IF (CMAKE_SYSTEM_NAME STREQUAL "Darwin")
  SET(UNIX TRUE)
ELSEIF (CMAKE_SYSTEM_NAME STREQUAL "Linux")
  SET(UNIX TRUE)
ELSE ()
  SET(UNIX FALSE)
ENDIF ()

IF (UNIX)
	SET(COPY_OR_LINK create_symlink)
	SET(COPY_DIRECTORY_OR_LINK create_symlink)
ELSE()
	SET(COPY_OR_LINK copy)
	SET(COPY_DIRECTORY_OR_LINK copy_directory)
ENDIF()

ADD_CUSTOM_TARGET(pdf
  ALL
  WORKING_DIRECTORY ${MCS_BINARY_DIR})

ADD_CUSTOM_COMMAND(
  TARGET pdf
  PRE_BUILD
  COMMAND ${CMAKE_COMMAND} -E ${COPY_OR_LINK} "${MCS_SOURCE_DIR}/main.tex" "${MCS_BINARY_DIR}/main.tex"
  WORKING_DIRECTORY ${MCS_BINARY_DIR}
  COMMENT "Copy \"${MCS_SOURCE_DIR}/main.tex\" to \"${MCS_BINARY_DIR}/main.tex\""
  VERBATIM)

ADD_CUSTOM_COMMAND(
  TARGET pdf
  PRE_BUILD
  COMMAND ${CMAKE_COMMAND} -E ${COPY_DIRECTORY_OR_LINK} "${MCS_SOURCE_DIR}/contents" "${MCS_BINARY_DIR}/contents"
  WORKING_DIRECTORY ${MCS_BINARY_DIR}
  COMMENT "Copy \"${MCS_SOURCE_DIR}/contents\" to \"${MCS_BINARY_DIR}/contents\""
  VERBATIM)

ADD_CUSTOM_COMMAND(
  TARGET pdf
  COMMAND ${XELATEX_COMPILER}
  ARGS	"main"
  DEPENDS	"main.tex"
  WORKING_DIRECTORY ${MCS_BINARY_DIR}
  COMMENT	"${XELATEX_COMPILER} ${MCS_BINARY_DIR}/main.tex")

ADD_CUSTOM_COMMAND(
  TARGET pdf
  COMMAND ${MAKEINDEX_COMPILER}
  ARGS	"main"
  DEPENDS	"main.tex"
  WORKING_DIRECTORY ${MCS_BINARY_DIR}
  COMMENT	"${XELATEX_COMPILER} ${MCS_BINARY_DIR}/main.tex")

ADD_CUSTOM_COMMAND(
  TARGET pdf
  COMMAND ${XELATEX_COMPILER}
  ARGS	"main"
  DEPENDS	"main.tex"
  WORKING_DIRECTORY ${MCS_BINARY_DIR}
  COMMENT	"${XELATEX_COMPILER} ${MCS_BINARY_DIR}/main.tex")

ADD_CUSTOM_COMMAND(
  TARGET pdf
  COMMAND ${XELATEX_COMPILER}
  ARGS	"main"
  DEPENDS	"main.tex"
  WORKING_DIRECTORY ${MCS_BINARY_DIR}
  COMMENT	"${XELATEX_COMPILER} ${MCS_BINARY_DIR}/main.tex")

# ADD_CUSTOM_COMMAND(
# 	TARGET en
# 	COMMAND ${BIBER_COMPILER}
# 	ARGS	"main"
# 	DEPENDS	"main.bib"
# 	WORKING_DIRECTORY "${CV_BINARY_DIR}/en_US"
# 	COMMENT	"${BIBER_COMPILER} ${CV_BINARY_DIR}/en_US/main.bib")
#
# ADD_CUSTOM_COMMAND(
# 	TARGET en
# 	COMMAND ${XELATEX_COMPILER}
# 	ARGS	"main"
# 	DEPENDS	"main.tex"
# 	WORKING_DIRECTORY "${CV_BINARY_DIR}/en_US"
# 	COMMENT	"${XELATEX_COMPILER} ${CV_BINARY_DIR}/en_US/main.tex")
#
# ADD_CUSTOM_COMMAND(
# 	TARGET en
# 	POST_BUILD
# 	COMMAND ${CMAKE_COMMAND} -E copy "${CV_BINARY_DIR}/en_US/main.pdf" "${CV_BINARY_DIR}/CV-en_US.pdf"
# 	WORKING_DIRECTORY ${CV_BINARY_DIR}
# 	COMMENT "Copy \"${CV_BINARY_DIR}/en_US/main.pdf\" to \"${CV_BINARY_DIR}/CV-en_US.pdf\""
# 	VERBATIM)
